<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:id="@+id/rl_registration"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    >
    <TextView
         android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"/>


    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_toRightOf="@id/tv_username"
        />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/password"

        android:layout_below="@id/et_username"/>

    />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:inputType="textPassword"
        android:layout_below="@id/et_username"
        android:layout_toRightOf="@id/tv_password"/>

    <TextView
        android:id="@+id/tv_gender"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_below="@id/et_password"
        />


    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_gender"
        android:layout_below="@id/et_password"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/gender_male"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:checked="true"
            android:background="#ffffff"
            />

        <RadioButton

            android:id="@+id/gender_female"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_marginLeft="20dp"
            android:background="#ffffff" />


    </RadioGroup>
    <TextView
        android:id="@+id/tv_district"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/district"
        android:layout_below="@id/rg"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spn_districts"
        android:layout_below="@id/tv_district"
        android:layout_marginTop="10dp"></Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_alert"
        android:layout_marginTop="20dp"
        android:layout_below="@id/spn_districts"
       android:textSize="20sp"
        android:text="@string/tv_sms"/>
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/smsalert"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:layout_below="@id/tv_alert"
         android:textOn="@string/yes"
         android:textOff="@string/no"/>

<!--    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="thoughts"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:onClick="onThoughts"
        />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="contacts"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onContacts"
        />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:onClick="onRegister"
        />

-->
</RelativeLayout>