<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.neebal.firstandroidapp.RegistrationActivity">
     <EditText

         android:layout_width="match_parent"
         android:layout_height="wrap_content"

         android:hint="Username"
         android:layout_marginTop="20dp"
         android:background="#2b889d" />
    <EditText
        android:layout_marginTop="20dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="Password"
        android:inputType="textPassword"

        android:background="#3ad1c6" />


    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        />

    <RadioGroup

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        >
        <RadioButton
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            />

        <RadioButton
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_marginLeft="20dp"
             />


    </RadioGroup>


    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="onRegister"/>
</LinearLayout>
