<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="in.neebal.firstandroidapp.DownloadActivity">
<EditText
    android:id="@+id/ed_feedback"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="20dp"
    android:hint="@string/feedback"
    />
    <Button
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_feedback"
        android:text="@string/download"
        android:layout_marginTop="20dp"
        android:onClick="onDownload"/>
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_toRightOf="@id/download"
       android:text=""
        android:layout_below="@id/ed_feedback"
       android:id="@+id/tv_updation"
       android:layout_marginTop="30dp"
       android:layout_marginLeft="20dp"
       android:textSize="20sp"/>
    <TextView
        android:id="@+id/tv_dc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/download_complete"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_below="@id/download"
        android:layout_marginTop="20dp"
        />
</RelativeLayout>
